--- a/api/package.json
+++ b/api/package.json
@@ -32,7 +32,9 @@
     "prestart": "npm run rebuild",
     "start": "node -r source-map-support/register .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
-    "rebuild": "npm run clean && npm run build"
+    "rebuild": "npm run clean && npm run build",
+    "start:watch": "tsc-watch --target es2017 --outDir ./dist --onSuccess \"node .\"",
+    "start:debug": "node --inspect ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -47,19 +49,35 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^11.0.9",
     "@loopback/boot": "^7.0.9",
     "@loopback/core": "^6.1.6",
+    "@loopback/cron": "^0.12.9",
     "@loopback/repository": "^7.0.9",
     "@loopback/rest": "^14.0.9",
     "@loopback/rest-explorer": "^7.0.9",
     "@loopback/service-proxy": "^7.0.9",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
+    "csv-parser": "^3.1.0",
+    "dotenv": "^16.4.7",
+    "isemail": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "loopback-connector-mysql": "^7.0.17",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@loopback/build": "^11.0.8",
-    "source-map-support": "^0.5.21",
     "@loopback/testlab": "^7.0.8",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^16.18.119",
+    "@types/nodemailer": "^6.4.17",
+    "source-map-support": "^0.5.21",
+    "tsc-watch": "^6.2.1",
     "typescript": "~5.2.2"
   }
 }
