--- a/api/package.json
+++ b/api/package.json
@@ -63,6 +63,7 @@
     "crypto": "^1.0.1",
     "csv-parser": "^3.1.0",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "isemail": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "loopback-connector-mysql": "^7.0.17",
